Hoàn thiện đăng nhập và chuyển trang theo vai trò